<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Bool" Id="{97bf33e2-ad02-4219-994d-0d8c409fa4c5}">
    <Declaration><![CDATA[TYPE T_Bool : BOOL; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>