<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="T_Dint" Id="{ac4c7b2c-812d-49cd-bad5-35d8cd449a8d}">
    <Declaration><![CDATA[TYPE T_Dint : DINT; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>