<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_Simple" Id="{4baff7a0-8231-4776-8201-c8dbba13e098}">
    <Declaration><![CDATA[TYPE ST_Simple :
STRUCT
	bMember  		: BOOL;
    dtMember 		: DT;
	fMember   		: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>